--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -2,32 +2,32 @@
 {% block title %} Search {% endblock %}
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <form action="/search_trip/" method="get">
-                {% csrf_token %}
-              <input id="input-search" type="text" name="title" placeholder="Type to search" autofocus>
-            </form>
-        </div>
-    </div>
-    <br/>
-    <hr/>
+{#    <div class="row">#}
+{#        <div class="col-lg-12">#}
+{#            <form action="/search_trip/" method="get">#}
+{#                {% csrf_token %}#}
+{#              <input id="input-search" type="text" name="title" placeholder="Type to search" autofocus>#}
+{#            </form>#}
+{#        </div>#}
+{#    </div>#}
+{#    <br/>#}
+{#    <hr/>#}
+    <h1>Search results for "{{ title_search }}"</h1>
     {% if not trip_result %}
-    <p>We couldn't find anything...</p>
+        <p>Oops! BrainTravel could not find anything...</p>
     {% endif %}
-
     {% for trip in trip_result %}
-        <div class="well animated fadeInUp">
+        <div class="well animated fadeInUp col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="media">
                 <div class="row">
-                    <div class="col-md-2 col-sm-3 col-lg-2 col-xs-12 text-center">
-                        <a href="#">
-                            <img class="img-rounded img-responsive" src="/{{trip.traveller.photo}}">
+                    <div class="col-xs-offset-4 col-xs-4 col-sm-offset-0 col-sm-2 col-md-offset-0 col-md-2 col-lg-offset-0 col-lg-2">
+                        <a href="/profile/{{ trip.traveller.id }}">
+                            <img class="img-rounded img-responsive img-circle" src="/{{trip.traveller.photo}}" title="{{ trip.traveller.first_name }}">
                         </a>
                     </div>
-                    <div class="col-md-10 col-sm-9 col-lg-10 col-xs-12">
-                        <div class="media-body">
-                            <h3 class="media-heading text-center">{{trip.name}}</h3>
+                    <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+                        <div class="media-body text-justify search-title">
+                            <h2 class="media-heading text-center">{{trip.name}}</h2>
                             <p class="text-right">By {{trip.traveller}}</p>
                             <p>{{trip.publishedDescription|safe}}</p>
                             <ul class="list-inline list-unstyled">
