Bug diseño de la vista de comprar coins

--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -13,7 +13,8 @@
                         <p>4.50&euro;</p>
                     </div>
                     <div class="type">
-                        <p>40 coins pack</p>
+                        <p>40 coins</p>
+                        <p>pack</p>
                     </div>
                     <div class="pricing-footer">
                         {{form1.render}}
@@ -28,7 +29,8 @@
                     <p>7&euro;</p>
                 </div>
                 <div class="type">
-                    <p>60 coins pack</p>
+                    <p>60 coins</p>
+                    <p>pack</p>
                 </div>
                 <div class="pricing-footer">
                     {{form2.render}}
@@ -43,7 +45,8 @@
                      <p>10&euro;</p>
                 </div>
                 <div class="type">
-                    <p>100 coins pack</p>
+                    <p>100 coins</p>
+                    <p>pack</p>
                 </div>
                 <div class="pricing-footer">
                     {{form3.render}}
