Rediseño de las vistas de listado de viajes.

--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -26,20 +26,25 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-                        <div class="media-body text-justify search-title">
-                            <h2 class="media-heading text-center">{{trip.name}}</h2>
-                            <p class="text-right">By {{trip.traveller}}</p>
+                        <div class="text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <h2>{{trip.name}}</h2>
+                        </div>
+                        <div class="text-right-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <p><i class="fa fa-globe fa-1x"></i> {{trip.city|safe}} ({{trip.country|safe}})</p>
+                        </div>
+                        <div class="text-justify col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <p>{{trip.publishedDescription|safe}}</p>
+                        </div>
+                        <div class="text-left-center col-xs-12 col-sm-12 col-md-7 col-lg-6">
+                            <p><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</p>
+                        </div>
+                        <div class="text-right-center col-xs-12 col-sm-12 col-md-5 col-lg-offset-1 col-lg-5">
                             <ul class="list-inline list-unstyled">
-                                <li><span><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</span></li>
-                                </ul>
-                                <ul class="list-inline list-unstyled">
-                                <li><span> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></span></li>
+                                <li> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></li>
                                 <li>|</li>
                                 <li><i class="fa fa-thumbs-o-up"></i> {{trip.likes}}</li>
                                 <li>|</li>
                                 <li><i class="fa fa-thumbs-o-down"></i> {{trip.dislikes}}</li>
-                                <li>|</li>
                                 <li><a href="/public_trip_details/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> View more</a></li>
                             </ul>
                         </div>
