Centrado los textos corregido bug donde los nombre de los trip no se almacenaban expecificado el tipo de los js en base.html añadido un pattern a las fechas redirecciones corregidas (hay que mejorar la paginacion) form simplificados pagina web simplificada

--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -2,9 +2,10 @@
 {% block title %} Buy coins {% endblock %}
 {% block content %}
 <div class="container">
+<div class="text-center">
     <h1>Paquetes de monedas</h1>
     <p>Con nuestras monedas virtuales podras organizar tus viajes. Aprovecha nuestros packs!</p>
-
+</div>
     <div class="db-padding-btm db-attached">
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <div class="db-wrapper">
