--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -24,20 +24,20 @@
     <link rel="stylesheet" href="{% static "css/summernote.css" %}">
     <link rel="stylesheet" href="{% static "css/summernote-bs3.css" %}">
     <!-- Jquery -->
-    <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <!-- Boostrap -->
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/summernote.js" %}"></script>
-    <script src="{% static "js/summernote-es-ES.js" %}"></script>
-    <script src="{% static "js/bootstrap-datepicker.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/summernote.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/summernote-es-ES.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap-datepicker.min.js" %}"></script>
     <!-- Dependencies JS -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB2Ejc7OmM9YxiWGvUqBrx3sKPKedF-IA8&sensor=false"></script>
-    <script src="{% static "js/sweet-alert.min.js" %}"></script>
-    <script src="{% static "js/countUp.min.js" %}"></script>
-    <script src="{% static "js/main.js" %}"></script>
-    <script src="{% static "js/validator.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/sweet-alert.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/countUp.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/main.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/validator.js" %}"></script>
     <!-- Custom Javascript -->
-    <script src="{% static "js/home/morphext.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/home/morphext.min.js" %}"></script>
 
     {% block extrahead %} {% endblock %}
 </head>
