--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -4,7 +4,9 @@
 <div class="container">
     {% load i18n %}
 
-    <h2>{% trans "List of my coin history" %}</h2>
+    <div class="text-center">
+        <h2>{% trans "List of my coin history" %}</h2>
+    </div>
 
     {% if not list_coin_history %}
         <h4>{% trans "We couldn't find anything..." %}</h4>
