recuperado el script de espera mientras se hace el plan que se habia eliminado por accidente. (sigue sin estar arreglado)

--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -75,6 +75,15 @@
 
         $('#tripPrice').empty().append(coins);
     }
+
+    function whileLoading() {
+        swal({
+            title: "Loading...",
+            text: "We are working hard on your plan. It might take a while, please, be patient :)",
+            showConfirmButton: false,
+            imageUrl: "{% static "img/gears.svg" %}"
+        });
+    }
 </script>
     <script>
         $(document).ready(function () {
